# StormGraph

./: .gitignore  .gitmodules  .travis.yml  README.md
Archived/: RadianceModels.bat  RadianceModels.cfx2  autorun.misl  break_in.world  outnum.cfx2  postapo.cfx2  sg_demo.cfx2  ship.max  storm.cfx2  tolcl.cfx2
Archived/legacy/: MakeBinding.bat  Sys.cpp  Sys.hpp  VisualInterface.hpp
Archived/postapo/: InGame.he  PlayerVehicle.he  Vehicle.he  main.he
Archived/sg/: BoxCollisionModel.he  GameScene.he  Particle.he  ParticleSystem.he  PointCollisionModel.he  Sprite.he  Util.he
Archived/sg_demo/: Release.cfx2  Release_package.cfx2  sg_demo_Release.cfx2
BspView/: CMakeLists.txt
BspView/assets/: Client.cfx2
BspView/src/: BspView.cpp  DllMain.cpp
Duel/: CMakeLists.txt  Host.txt  README.md
Duel/assets/: Common.mox  Duel.mox
Duel/assets-src/: player.max
Gui/: CMakeLists.txt
Gui/assets/Radiance.EpicStyler.Assets/: BlurPixel.glsl  BlurVertex.glsl
Gui/include/Radiance/: EpicStyler.hpp  OnyxStyler.hpp  Radiance.hpp  Styler.hpp
Gui/src/Radiance/: EpicStyler.cpp  Models.hpp  OnyxStyler.cpp  Radiance.cpp  Styler.cpp  Widget.cpp
Gui/src/UI/: BoxSizer.cpp  Button.cpp  Driver.cpp  Gui.cpp  GuiDriver.cpp  GuiDriver.hpp  Panel.cpp  PopupMenu.cpp  ProgressBar.cpp  ScrollBar.cpp  StaticText.cpp  TableLayout.cpp  TextBox.cpp  Widgets.cpp  Window.cpp
Launcher/: CMakeLists.txt
Launcher/src/: Launch.cpp
OpenGlDriver/: CMakeLists.txt
OpenGlDriver/src/OpenGlDriver/: BspModel.cpp  Driver.cpp  Font.cpp  FreeType.hpp  GlUtil.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelBuiltins.cpp  OpenGlDriver.cpp  OpenGlDriver.hpp  RenderBuffer.cpp  RenderQueue.cpp  Shader.cpp  Texture.cpp  ViewFrustum.cpp
Orion/: CMakeLists.txt
Orion/assets/: Orion.cfx2
Orion/assets-src/: spaceship.max
Orion/src/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  Orion.cpp
SgConfig/: SgConfigApp.cpp  SgConfigApp.h  SgConfigMain.cpp  SgConfigMain.h
SgConfig/wxsmith/: SgConfigdialog.wxs
SgDemo/: CMakeLists.txt
SgDemo/src/: DemoScene.cpp  DemoScene.hpp  main.cpp
SgDemo/src/Radiance/: EpicStyler.cpp  Models.hpp  OnyxStyler.cpp  Radiance.cpp  Styler.cpp  Widget.cpp
Storm/: README.md
Storm/assets/: Release.cfx2  clean.bat  compile.bat
Storm/assets-src/: ConcreteFloor.max  Human.max  Ti31.max  box_5m.max
Storm/src/: Actor.he  AiEnemy.he  Combat.he  Database.he  FullscreenInput.he  InGame.he  (+5 more)
StormCraft/: CMakeLists.txt  README.md
StormCraft/assets-src/: lightbulb.max
StormCraft/assets/StormCraft/: Release.cfx2  Release_deploy.bat  Release_gcc4_win64.cfx2  Release_gcc4_win64_deploy.bat  release_run.bat  release_run_gcc4_win64.bat
StormCraft/assets/StormCraft/Models/: lightbulb.ms3d
StormCraft/src/ContentTools/: Bsp.cpp  Ctree2Generator.cpp  ImageWriter.cpp
StormCraft/src/StormCraft/: AboutDialog.cpp  AboutDialog.hpp  FsManagerDialog.cpp  FsManagerDialog.hpp  MapExportDialog.cpp  MapExportDialog.hpp  MapInfoDlg.cpp  MapInfoDlg.hpp  MaterialManagerDialog.cpp  MaterialManagerDialog.hpp  NewWorldDialog.cpp  NewWorldDialog.hpp  StormCraftApp.cpp  StormCraftApp.hpp  StormCraftMain.cpp  StormCraftMain.hpp  TmeDialog.cpp  TmeDialog.h  TmeFrame.cpp  TmeFrame.hpp  World.cpp  World.hpp
StormCraft/src/StormCraft/wxsmith/: AboutDialog.wxs  FsManagerDialog.wxs  MapExportDialog.wxs  MaterialManagerDialog.wxs  NewWorldDialog.wxs  StormCraftFrame.wxs  TmeFrame.wxs
StormGraphCommon/: CMakeLists.txt
StormGraphCommon/include/StormGraph/: Abstract.hpp  Common.hpp  Core.hpp  GeometryFactory.hpp  GraphicsDriver.hpp  Server.hpp  Vector.hpp
StormGraphCommon/src/Common/: Abstract.cpp  Camera.cpp  Common.cpp  GeometryFactory.cpp  Resource.cpp  Structs.cpp  Timer.cpp
StormGraphCore/: CMakeLists.txt
StormGraphCore/dependencies/Moxillan2/: CMakeLists.txt
StormGraphCore/dependencies/Moxillan2/include/Moxillan/: BinaryFormat.hpp  Common.hpp  Node.hpp  Package.hpp  PackageBuilder.hpp
StormGraphCore/dependencies/Moxillan2/src/: CLI.cpp  DirectoryNode.cpp  MemoryFileNode.cpp  NativeDirectoryNode.cpp  NativeFileNode.cpp  Package.cpp  PackageBuilder.cpp
StormGraphCore/include/StormGraph/: CommandLine.hpp  ContentTools.hpp  Engine.hpp  GuiDriver.hpp  HeightMap.hpp  Image.hpp  KeyScanner.hpp  OnScreenLog.hpp  ParticleSystem.hpp  Profiler.hpp  ResourceManager.hpp  Scene.hpp  SceneGraph.hpp  SoundDriver.hpp  VisualInterface.hpp
StormGraphCore/include/StormGraph/IO/: Bsp.hpp  BspGenerator.hpp  Ctree2.hpp  Ctree2Generator.hpp  FileSystem.hpp  HeightMap.hpp  ImageWriter.hpp  ModelLoader.hpp
StormGraphCore/src/Core/: CommandLine.cpp  Core.cpp  Engine.cpp  FileSystem.cpp  HeightMap.cpp  Internal.hpp  KeyScanner.cpp  OnScreenLog.cpp  Profiler.cpp  ResourceManager.cpp  SceneGraph.cpp  SoundDriver.cpp
StormGraphCore/src/IO/: BspLoader.cpp  ImageLoader.cpp  ModelLoader.cpp  Ms3dLoader.cpp
StormGraphLegacy/: README.md  Sys.cpp  Sys.hpp  VisualInterface.hpp
ToLClient/: CMakeLists.txt  README.md
ToLClient/assets-src/: README.md
ToLClient/assets/TolClient/: Client.cfx2  ClientVars.txt  Release.cfx2  Release_TolClient.cfx2  Release_deploy.bat  Release_package.cfx2  config.txt  startup.txt
ToLClient/assets/TolClient/Localized/: Strings.cfx2
ToLClient/assets/TolClient/UI/: TitleScreenUI.cfx2  activityIndicator.cfx2  watermark.cfx2
ToLClient/launcher/src/: config.hpp  launcher.cpp  launcher.hpp  launcher.rc  md5.c  resource.h  update.cpp
ToLClient/src/: InitScene.cpp  InitScene.hpp  Map.cpp  Map.hpp  Messages.hpp  TitleScene.cpp  TitleScene.hpp  TolClient.cpp  TolClient.hpp  WorldScene.cpp  WorldScene.hpp  WorldSession.cpp  WorldSession.hpp
ToLClient/web/: status.php
tolcl/: CMakeLists.txt  README.md  TODO.txt
tolcl/include/: Messages.hpp
tolcl/src/: ClientUI.cpp  ClientUI.hpp  GameClient.hpp  GameScene.cpp  GameScene.hpp  GameUI.cpp  Inventory.cpp  Inventory.hpp  ItemIconManager.cpp  MainMenu.cpp  MainMenu.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Scripting.cpp  Scripting.hpp  UI.hpp  WorldSession.cpp  WorldSession.hpp  main.cpp
utils/: deploy.he  rehash_ver_2.txt
(+129 files in other folders)
